--- a/src/conf/app.conf
+++ b/src/conf/app.conf
@@ -5,3 +5,6 @@ sessionon = true
 #这里设置oauth app的client id和client secret
 client_id = "c698bd09d35414343da4"
 client_secret ="e680c1f3ae01fab2175efa4b3366cc43d7ca36ac"
+secret_token="0123456789"
+#允許接收post請求的request body
+copyrequestbody = true
