add jwt authorize

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -9,3 +9,6 @@ password=kcoin2019
 [GithubOAuth]
 clientID = 17a8c3e212ff56ace267
 clientSecret=6725d566c37d0eeb6e27a4d57c93a16602c5cc05
+
+[Jwt]
+jwtSecret = kcoinchongchongchong
